# PathVisualizer

./: CMakeLists.txt
src/: config.h  main.cpp
src/algorithms/: astar.cpp  astar.h  dijkstra.cpp  dijkstra.h
src/core/: game.cpp  game.h  graph.cpp  graph.h  grid.cpp  grid.h
src/graphics/: render.cpp  render.h
src/input/: handler.cpp  handler.h
src/utils/: logger.h
